[package]
name = "chronicled"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
subxt = { version = "0.35", features = ["jsonrpsee"] }
bs58 = "0.5"
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
