[package]
name = "chronicled"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
subxt = { version = "0.37", features = ["jsonrpsee", "substrate-compat"] }
bs58 = "0.5"
chrono = "0.4"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chron-db = { path = "../crates/chron-db" }
serde_json = "1"
parity-scale-codec = { version = "3", features = ["derive", "full"] }
