[package]
name = "chron-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
bigdecimal = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
